2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/metadata.c: (get_mp3_picture_data):

	Only use the cover image if its width & height are >= 64.
	
	* AUTHORS:
	* src/About.cs:

	Added Lee & Viet Yen.

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Do actually start the thread :P

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/metadata.c: (metadata_free):

	Add a comment about not unreffing the album art pixbuf.
	
	* src/Song.cs:

	Give cover.jpg priority over the ID3 image.

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/ActionThread.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/SongDatabase.cs:

	More threading fixes.

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Only allow one thread to change the DB at the time.

2004-02-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Avoid checking for changes & loading at the same time.

2004-02-08  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/metadata.c: (get_mp3_duration), (get_mp3_picture_data),
	(get_mp3_gain), (assign_metadata_mp3), (metadata_get_album_art):
	* libmuine/metadata.h:
	* src/CoverDatabase.cs:
	* src/Metadata.cs:
	* src/Song.cs:

	Get the album cover from the ID3 tag if available.

2004-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Fix NSognsChanged usage in SeekTo.

2004-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/muine-default-cover.png:

	Fix image dimensions.

2004-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Correctly remove songs from Songs hashtable.

2004-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Change > 0.6 to >= 0.6 in the amazon matching stuff.

2004-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/StringUtils.cs:

	Use legacy strcmp for comparing sort keys.
